--- a/index.html
+++ b/index.html
@@ -73,10 +73,12 @@
             <section class="proyectos">
                 <ul class="contenido-proyectos">
                     <li>
+                        <a href="https://github.com/Brianje95/recepcionCamiones">
                         <h2>Recepcion de Camiones</h2>
                         <img src="imagenes/tp3.PNG">
                         <img src="imagenes/codigoPY.PNG">
                         <p class="proyecto-descripcion">trabajo de la facultad en Algoritmos y Estructuras de Datos - Python con Archivos</p>
+                        </a>
                     </li>
                 </ul>
             </section>
